--- a/crgw-ui/src/components/standalone/table/TableView.scss
+++ b/crgw-ui/src/components/standalone/table/TableView.scss
@@ -72,11 +72,11 @@
         margin-top: 4px;
 
         &.desc {
-          background-image: url("../../../../assets/iconfinder_angle-down_1608507.svg");
+          background-image: url("assets/iconfinder_angle-down_1608507.svg");
         }
 
         &.asc {
-          background-image: url("../../../../assets/iconfinder_angle-up_1608510.svg");
+          background-image: url("assets/iconfinder_angle-up_1608510.svg");
         }
       }
 
@@ -104,30 +104,30 @@
 
       .mimetype {
         &.application-zip {
-          background-image: url("../../../../assets/iconfinder_file-zip-alt_285690.svg");
+          background-image: url("assets/iconfinder_file-zip-alt_285690.svg");
         }
 
         &.video-mp4,
         &.video-x-m4v,
         &.video-x-matroska {
-          background-image: url("../../../../assets/iconfinder_movie-alt2_285634.svg");
+          background-image: url("assets/iconfinder_movie-alt2_285634.svg");
         }
       }
 
       .storageservice {
         &.gdrive {
-          background-image: url("../../../../assets/gdrive-lightweight.svg");
+          background-image: url("assets/gdrive-lightweight.svg");
         }
 
         &.local {
-          background-image: url("../../../../assets/disk.svg");
+          background-image: url("assets/disk.svg");
         }
       }
 
       .dateactivated {
         .icon {
           background-size: 14px 14px;
-          background-image: url("../../../../assets/heart.svg");
+          background-image: url("assets/heart.svg");
           margin-top: 8px;
           margin-left: 2px;
 
@@ -139,7 +139,7 @@
 
       .isnewfile {
         .icon {
-          background-image: url("../../../../assets/new.svg");
+          background-image: url("assets/new.svg");
           margin-top: 5px;
           margin-left: 2px;
 
@@ -151,7 +151,7 @@
 
       .highlights {
         .icon {
-          background-image: url("../../../../assets/star.svg");
+          background-image: url("assets/star.svg");
           margin-top: 5px;
           margin-left: 2px;
 
