--- a/crgw-ui/src/components/standalone/scrape/ScrapePanel.scss
+++ b/crgw-ui/src/components/standalone/scrape/ScrapePanel.scss
@@ -16,7 +16,7 @@
       }
 
       &.open {
-        background-image: url("../../../../assets/chrome.svg");
+        background-image: url("/assets/chrome.svg");
         background-repeat: no-repeat;
         background-size: 18px 18px;
         background-position: 6px 9px;
