--- a/crgw-ui/src/components/standalone/LibrarySelector.scss
+++ b/crgw-ui/src/components/standalone/LibrarySelector.scss
@@ -34,4 +34,8 @@
   margin-top: 1.5em;
   padding: 1em;
   background-color: rgb(201, 229, 254);
+  cursor: pointer;
+  * {
+    cursor: pointer;
+  }
 }
