--- a/crgw-ui/src/components/standalone/table/TableView.scss
+++ b/crgw-ui/src/components/standalone/table/TableView.scss
@@ -119,7 +119,7 @@
           background-image: url("/assets/gdrive-lightweight.svg");
         }
 
-        &.local {
+        &.streamingUrl {
           background-image: url("/assets/disk.svg");
         }
       }
@@ -172,13 +172,6 @@
       .fileactions {
         float: right;
 
-        .row-index {
-          color: var(--light);
-          font-size: 0.6rem;
-          position: fixed;
-          margin-left: 3px;
-        }
-
         .btn,
         .MuiLinearProgress-root {
           padding: 1px 6px;
@@ -192,10 +185,6 @@
         .btn {
           color: var(--primary);
           background-color: var(--white);
-        }
-
-        .row-index {
-          color: var(--primary);
         }
       }
     }
