rename streamingUrl as streamingurl

--- a/crgw-ui/src/components/standalone/table/TableView.scss
+++ b/crgw-ui/src/components/standalone/table/TableView.scss
@@ -119,7 +119,7 @@
           background-image: url("/assets/gdrive-lightweight.svg");
         }
 
-        &.streamingUrl {
+        &.streamingurl {
           background-image: url("/assets/disk.svg");
         }
       }
