--- a/crgw-ui/src/components/reusable/FileSummary.scss
+++ b/crgw-ui/src/components/reusable/FileSummary.scss
@@ -41,7 +41,7 @@
           background-image: url("/assets/gdrive-lightweight.svg");
         }
 
-        &.local {
+        &.streamingurl {
           background-image: url("/assets/disk.svg");
         }
       }
