--- a/crgw-ui/src/components/reusable/ContextMenuWrapper.scss
+++ b/crgw-ui/src/components/reusable/ContextMenuWrapper.scss
@@ -79,8 +79,7 @@
 .react-contextmenu-item.react-contextmenu-submenu > .react-contextmenu-item {
 }
 
-.react-contextmenu-item.react-contextmenu-submenu
-  > .react-contextmenu-item:after {
+.react-contextmenu-item.react-contextmenu-submenu > .react-contextmenu-item:after {
   content: "▶";
   display: inline-block;
   position: absolute;
