--- a/crgw-ui/src/components/standalone/fileview/gallery/GalleryView.scss
+++ b/crgw-ui/src/components/standalone/fileview/gallery/GalleryView.scss
@@ -1,7 +1,7 @@
 .zip-view {
   background: white;
   outline: none;
-  height: 100vh;
+  height: 100%;
 
   .lightbox-with-progress {
     width: 100%;
