--- a/crgw-ui/src/components/standalone/fileview/gallery/GalleryView.scss
+++ b/crgw-ui/src/components/standalone/fileview/gallery/GalleryView.scss
@@ -3,15 +3,13 @@
   outline: none;
   height: 100%;
 
+  * {
+    outline: none;
+  }
+
   .lightbox-with-progress {
     width: 100%;
     height: 100%;
-  }
-
-  .MuiLinearProgress-determinate {
-    * {
-      transition: none;
-    }
   }
 
   .lightbox {
