refactor: manage gallery states using react context (#11)
* save progress

* more changes

* save progress

* more changes

* blanket portal styling

* more progress

* make img props optional

* save progress

--- a/crgw-ui/src/components/standalone/fileview/gallery/GalleryView.scss
+++ b/crgw-ui/src/components/standalone/fileview/gallery/GalleryView.scss
@@ -1,17 +1,15 @@
 .zip-view {
   background: white;
   outline: none;
-  height: 100vh;
+  height: 100%;
+
+  * {
+    outline: none;
+  }
 
   .lightbox-with-progress {
     width: 100%;
     height: 100%;
-  }
-
-  .MuiLinearProgress-determinate {
-    * {
-      transition: none;
-    }
   }
 
   .lightbox {
