--- a/crgw-ui/src/providers/blanket/blanket.scss
+++ b/crgw-ui/src/providers/blanket/blanket.scss
@@ -1,4 +1,10 @@
-.blanket-provider {
+.blanket-portal {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  overflow: auto;
+
   .blanket-view {
     .blanket-header {
       padding: 10px 10px 10px 20px;
