--- a/crgw-ui/src/components/standalone/fileview/gallery/GalleryView.scss
+++ b/crgw-ui/src/components/standalone/fileview/gallery/GalleryView.scss
@@ -10,6 +10,8 @@
   .lightbox-with-progress {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
   }
 
   .lightbox {
@@ -64,17 +66,6 @@
 
     .highlighted {
       opacity: 1;
-    }
-  }
-}
-
-.zipview,
-.windowed {
-  height: calc(100vh - 100px);
-
-  .zip-grid {
-    img {
-      height: 200px;
     }
   }
 }
