--- a/crgw-ui/src/components/standalone/scrape/ScrapePanel.scss
+++ b/crgw-ui/src/components/standalone/scrape/ScrapePanel.scss
@@ -3,77 +3,66 @@
     margin-bottom: 10px;
 
     input[type="text"] {
-      width: calc(100% - 275px);
-      margin: 4px 0;
+      flex: 1;
+      outline: none;
+      border: 1px solid var(--chakra-colors-gray-700);
+      border-radius: 0.35em;
+      padding: 0.25em 0.4em;
     }
 
-    .btn {
-      float: right;
-      margin-left: 5px;
+    .scrape-button {
+      margin: 0 0.5em;
+    }
 
-      &.addall {
-        width: 80px;
+    .add-group {
+      select {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
       }
 
-      &.open {
-        background-image: url("/assets/chrome.svg");
-        background-repeat: no-repeat;
-        background-size: 18px 18px;
-        background-position: 6px 9px;
-        padding-left: 28px;
-        width: 80px;
+      .add-button {
+        margin-left: 0;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
       }
     }
 
     .form-row {
-      margin: 0;
+      width: 100%;
+      margin-bottom: 0.5em;
+    }
+  }
 
-      &.metadata {
-        font-size: 0.9rem;
-        padding-top: 5px;
-        display: block;
-        width: 100%;
-        height: 20px;
+  .metadata {
+    .tag {
+      margin: 0 0 0 4px;
+      border-radius: 3px;
+      color: white;
+      background-color: gainsboro;
 
-        .tag-container {
-          float: right;
-        }
+      &.Available {
+        background-color: rgba(0, 123, 255, 0.3);
+      }
 
-        .tag {
-          margin: 0 0 0 4px;
-          border-radius: 3px;
-          color: white;
-          background-color: gainsboro;
+      &.Complete {
+        background-color: rgba(50, 205, 50, 0.3);
+      }
 
-          &.Available {
-            background-color: rgba(0, 123, 255, 0.3);
-          }
-
-          &.Complete {
-            background-color: rgba(50, 205, 50, 0.3);
-          }
-
-          &.Error {
-            background-color: rgba(255, 0, 0, 0.3);
-          }
-        }
+      &.Error {
+        background-color: rgba(255, 0, 0, 0.3);
       }
     }
   }
 
-  .MuiCircularProgress-root {
+  .spinner {
     position: absolute;
-    width: 40px;
-    height: 40px;
-    top: calc(50% - 20px);
-    left: calc(50% - 20px);
+    width: 100%;
+    height: 100%;
     z-index: 1;
   }
 
   .scrape-grid {
     width: 100%;
-    height: calc(100vh - 175px);
     display: block;
-    overflow-y: scroll;
   }
 }
