--- a/crgw-ui/src/providers/blanket/blanket.scss
+++ b/crgw-ui/src/providers/blanket/blanket.scss
@@ -6,10 +6,22 @@
   overflow: auto;
 
   .blanket-header {
-    padding: 10px 10px 10px 20px;
+    padding: 1em;
 
     .blanket-title {
       font-size: larger
     }
+  }
+
+  .blanket-body {
+    display: flex;
+    overflow-y: scroll;
+    flex-direction: column;
+    flex-grow: 1;
+    padding: 0 1em;
+  }
+
+  .blanket-footer {
+    padding: 1em;
   }
 }
