--- a/crgw-ui/src/components/standalone/fileview/VideoView.scss
+++ b/crgw-ui/src/components/standalone/fileview/VideoView.scss
@@ -1,17 +1,9 @@
 .video-view {
+  height: 100%;
+
   video {
     width: 100%;
     height: 100%;
-
-    max-width: 100%;
-    max-height: calc(100vh - 100px);
-
     outline: none;
-  }
-
-  &.fullscreen {
-    video {
-      max-height: 100vh;
-    }
   }
 }
