--- a/crgw-ui/src/components/standalone/scrape/ScrapePanelCardView.scss
+++ b/crgw-ui/src/components/standalone/scrape/ScrapePanelCardView.scss
@@ -1,9 +1,9 @@
 .scrape-card {
   position: relative;
-  display: inline-block;
-  padding: 0;
-  margin-right: 5px;
-  margin-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 
   &.error {
     background-color: rgba(255, 0, 0, 0.3);
@@ -13,7 +13,7 @@
     background-color: rgba(50, 205, 50, 0.3);
   }
 
-  .scrape {
+  .scrape-button {
     position: absolute;
     left: 10px;
     bottom: 10px;
@@ -21,18 +21,18 @@
     height: 30px;
   }
 
-  .img-wrapper {
-    img.thumbnail {
-      min-width: 80px;
+  .thumbnail {
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%;
 
-      &.clickable {
-        cursor: pointer;
-      }
+    &.clickable {
+      cursor: pointer;
+    }
 
-      &.error,
-      &.complete {
-        opacity: 0.5;
-      }
+    &.error,
+    &.complete {
+      opacity: 0.5;
     }
   }
 }
