--- a/crgw-ui/src/providers/blanket/blanket.scss
+++ b/crgw-ui/src/providers/blanket/blanket.scss
@@ -17,6 +17,7 @@
   .blanket-body {
     display: flex;
     overflow-y: scroll;
+    overflow-x: hidden;
     flex-direction: column;
     flex-grow: 1;
     padding: 0 1em;
