--- a/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
+++ b/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
@@ -1,12 +1,16 @@
 .video-view {
   height: 100%;
+  flex-direction: column;
+  overflow: hidden;
 
   .segments-view {
-    position: fixed;
     width: 100%;
+    height: 1rem; // should be the same height as that of a segment
     background-color: var(--chakra-colors-gray-100);
 
     .segment {
+      height: 1rem;
+      position: absolute;
       background-color: var(--chakra-colors-blue-300);
 
       &.open {
@@ -17,7 +21,7 @@
 
   video {
     width: 100%;
-    height: 100%;
+    max-height: calc(100% - 1rem); // subtracting 1rem to account for the height of the segments
     outline: none;
   }
 }
