--- a/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
+++ b/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
@@ -4,17 +4,24 @@
   overflow: hidden;
 
   .segments-view {
+    position: relative;
     width: 100%;
-    height: 1rem; // should be the same height as that of a segment
+    height: 1rem;
     background-color: var(--chakra-colors-gray-100);
 
     .segment {
-      height: 1rem;
-      position: relative;
+      height: 0.7rem;
+      position: absolute;
       background-color: var(--chakra-colors-blue-300);
 
       &.open {
         background-color: var(--chakra-colors-pink-300);
+      }
+
+      &.lead {
+        background-color: var(--chakra-colors-black);
+        height: 1rem;
+        padding: 0.2rem;
       }
     }
   }
