Video view touchups (#50)
* touchup work

* make segments view look better

* styling fixes

* more styling fixes

* show seeker at all times

--- a/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
+++ b/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
@@ -1,23 +1,34 @@
 .video-view {
   height: 100%;
+  flex-direction: column;
+  overflow: hidden;
 
   .segments-view {
-    position: fixed;
+    position: relative;
     width: 100%;
+    height: 1rem;
     background-color: var(--chakra-colors-gray-100);
 
     .segment {
+      height: 0.7rem;
+      position: absolute;
       background-color: var(--chakra-colors-blue-300);
 
       &.open {
         background-color: var(--chakra-colors-pink-300);
+      }
+
+      &.lead {
+        background-color: var(--chakra-colors-black);
+        height: 1rem;
+        padding: 0.2rem;
       }
     }
   }
 
   video {
     width: 100%;
-    height: 100%;
+    max-height: calc(100% - 1rem); // subtracting 1rem to account for the height of the segments
     outline: none;
   }
 }
