fix: style linter

--- a/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
+++ b/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
@@ -20,8 +20,8 @@
 
       &.lead {
         background-color: var(--chakra-colors-black);
-        top: .7rem;
-        height: .3rem;
+        top: 0.7rem;
+        height: 0.3rem;
         padding: 0.2rem;
       }
 
@@ -36,7 +36,7 @@
       border-radius: 1rem;
       padding: 0.1em 0.7rem;
       background-color: var(--chakra-colors-blackAlpha-700);
-      font-size: .65rem;
+      font-size: 0.65rem;
       color: white;
       margin-left: -0.65rem;
     }
