--- a/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
+++ b/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
@@ -6,7 +6,7 @@
   .segments-view {
     position: relative;
     width: 100%;
-    height: 1rem;
+    height: 2.5rem;
     background-color: var(--chakra-colors-gray-100);
 
     .segment {
@@ -20,15 +20,31 @@
 
       &.lead {
         background-color: var(--chakra-colors-black);
-        height: 1rem;
+        top: 0.7rem;
+        height: 0.3rem;
         padding: 0.2rem;
       }
+
+      &.highlight {
+        background-color: var(--chakra-colors-yellow-300);
+      }
+    }
+
+    .time-marker {
+      bottom: 0.1rem;
+      position: absolute;
+      border-radius: 1rem;
+      padding: 0.1em 0.7rem;
+      background-color: var(--chakra-colors-blackAlpha-700);
+      font-size: 0.65rem;
+      color: white;
+      margin-left: -0.65rem;
     }
   }
 
   video {
     width: 100%;
-    max-height: calc(100% - 1rem); // subtracting 1rem to account for the height of the segments
+    max-height: calc(100% - 2.5rem); // subtracting 1rem to account for the height of the segments
     outline: none;
   }
 }
