--- a/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
+++ b/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
@@ -10,7 +10,7 @@
     background-color: var(--chakra-colors-gray-100);
 
     .segment {
-      height: 0.7rem;
+      height: 0.3rem;
       position: absolute;
       background-color: var(--chakra-colors-blue-300);
 
@@ -20,13 +20,18 @@
 
       &.lead {
         background-color: var(--chakra-colors-black);
-        top: 0.7rem;
-        height: 0.3rem;
-        padding: 0.2rem;
+        top: 0.3rem;
+        height: 0.5rem;
+        min-width: 0.2rem;
+        max-width: 0.2rem;
       }
 
       &.highlight {
-        background-color: var(--chakra-colors-yellow-300);
+        background-color: var(--chakra-colors-yellow-400);
+        top: 0.8rem;
+        height: 0.5rem;
+        min-width: 0.2rem;
+        max-width: 0.2rem;
       }
     }
 
@@ -38,7 +43,7 @@
       background-color: var(--chakra-colors-blackAlpha-700);
       font-size: 0.65rem;
       color: white;
-      margin-left: -0.65rem;
+      margin-left: -0.8rem;
     }
   }
 
