--- a/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
+++ b/crgw-ui/src/components/standalone/fileview/video/VideoView.scss
@@ -19,11 +19,10 @@
       }
 
       &.lead {
-        background-color: var(--chakra-colors-black);
+        background-color: var(--chakra-colors-blackAlpha-400);
         top: 0.3rem;
         height: 0.5rem;
         min-width: 0.2rem;
-        max-width: 0.2rem;
       }
 
       &.highlight {
@@ -43,7 +42,7 @@
       background-color: var(--chakra-colors-blackAlpha-700);
       font-size: 0.65rem;
       color: white;
-      margin-left: -0.8rem;
+      margin-left: -1rem;
     }
   }
 
