--- a/crgw-ui/src/components/standalone/fileview/FileMetadataView.scss
+++ b/crgw-ui/src/components/standalone/fileview/FileMetadataView.scss
@@ -1,6 +1,14 @@
+.file-metadata-view {
+  padding: 1rem;
+}
+
 .json-editor {
   width: 100%;
   height: 400px;
   font-family: monospace;
-  outline: auto;
+  outline: 0.1rem solid;
+
+  &.error {
+    outline: 0.1rem solid var(--chakra-colors-red-500);
+  }
 }
