chore: more renaming

--- a/crgw-ui/src/components/reusable/FileBadges.scss
+++ b/crgw-ui/src/components/reusable/FileBadges.scss
@@ -1,3 +1,7 @@
+.chakra-badge.file-tag {
+  background-color: var(--chakra-colors-blue-100);
+}
+
 .orientation {
   &.vertical {
     background-image: url("/assets/phone.svg");
@@ -27,6 +31,7 @@
 }
 
 .dateactivated {
+
   &.active,
   &.inactive {
     background-color: transparent;
