--- a/crgw-ui/src/components/standalone/fileview/FileTagEditor.scss
+++ b/crgw-ui/src/components/standalone/fileview/FileTagEditor.scss
@@ -16,7 +16,7 @@
   border-color: #b1b1b1;
 }
 
-.file-label-editor {
+.file-tag-editor {
   &.disabled {
     * {
       background-color: var(--chakra-colors-gray-200);
