feat: file tag permutations (#61)
* feat: permutations

* chore: renames and fix imports

* chore: more renaming

* chore: new shortcut key

* chore: more rename

* fix: wrong shortcut key

* chore: new shortcut key

* feat: suggestion filter

--- a/crgw-ui/src/components/reusable/FileBadges.scss
+++ b/crgw-ui/src/components/reusable/FileBadges.scss
@@ -1,3 +1,7 @@
+.chakra-badge.file-tag {
+  background-color: var(--chakra-colors-blue-100);
+}
+
 .orientation {
   &.vertical {
     background-image: url("/assets/phone.svg");
