--- a/crgw-ui/src/components/standalone/scrape/ScrapePanel.scss
+++ b/crgw-ui/src/components/standalone/scrape/ScrapePanel.scss
@@ -18,8 +18,12 @@
       padding: 0.25em 0.4em;
     }
 
-    .scrape-button {
+    .scrape-host {
       margin: 0 0.5em;
+    }
+
+    .scrape-button {
+      margin-right: 0.5em;
     }
 
     .add-group {
