--- a/crgw-ui/src/components/standalone/scrape/ScrapePanelCardView.scss
+++ b/crgw-ui/src/components/standalone/scrape/ScrapePanelCardView.scss
@@ -26,8 +26,8 @@
 
   .thumbnail {
     flex-shrink: 0;
-    min-width: 100%;
-    min-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: contain;
 
     &.error,
