--- a/crgw-ui/src/components/standalone/MainView.scss
+++ b/crgw-ui/src/components/standalone/MainView.scss
@@ -10,7 +10,7 @@
     padding: 1em;
     background-color: rgb(201, 229, 254);
     border-radius: 0.5em;
-    margin-left: .5em;
+    margin-left: 0.5em;
 
     .first {
       margin: 0;
