--- a/crgw-ui/src/components/standalone/SessionConfigurer.scss
+++ b/crgw-ui/src/components/standalone/SessionConfigurer.scss
@@ -1,5 +1,6 @@
 .session-configurer {
-  background-color: aliceblue;
+  border: 1px solid rgba($color: #000000, $alpha: 0.08);
+  background-color: rgba($color: #000000, $alpha: 0.04);
   padding: 1.5em;
   border-radius: 0.5em;
 }
