--- a/crgw-ui/src/components/reusable/FileTagEditor.scss
+++ b/crgw-ui/src/components/reusable/FileTagEditor.scss
@@ -41,15 +41,15 @@
   cursor: text;
 }
 
-.react-tags.is-focused {
+.react-tags.is-active {
   border-color: #b1b1b1;
 }
 
-.react-tags__selected {
+.react-tags__list {
   display: inline;
 }
 
-.react-tags__selected-tag {
+.react-tags__tag {
   display: inline-block;
   box-sizing: border-box;
   margin: 0 6px 6px 0;
@@ -63,18 +63,18 @@
   line-height: inherit;
 }
 
-.react-tags__selected-tag:after {
+.react-tags__tag:after {
   content: "\2715";
   color: #aaa;
   margin-left: 8px;
 }
 
-.react-tags__selected-tag:hover,
-.react-tags__selected-tag:focus {
+.react-tags__tag:hover,
+.react-tags__tag:focus {
   border-color: #b1b1b1;
 }
 
-.react-tags__search {
+.react-tags__combobox {
   display: inline-block;
 
   /* match tag layout */
@@ -86,13 +86,13 @@
 }
 
 @media screen and (min-width: 30em) {
-  .react-tags__search {
+  .react-tags__combobox {
     /* this will become the offsetParent for suggestions */
     position: relative;
   }
 }
 
-.react-tags__search-input {
+.react-tags__combobox-input {
   /* prevent autoresize overflowing the container */
   max-width: 100%;
 
@@ -107,11 +107,11 @@
   line-height: inherit;
 }
 
-.react-tags__search-input::-ms-clear {
+.react-tags__combobox-input::-ms-clear {
   display: none;
 }
 
-.react-tags__suggestions {
+.react-tags__listbox {
   position: absolute;
   top: 100%;
   left: 0;
@@ -119,12 +119,12 @@
 }
 
 @media screen and (min-width: 30em) {
-  .react-tags__suggestions {
+  .react-tags__listbox {
     width: 240px;
   }
 }
 
-.react-tags__suggestions ul {
+.react-tags__listbox ul {
   margin: 4px -1px;
   padding: 0;
   list-style: none;
@@ -134,27 +134,27 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-.react-tags__suggestions li {
+.react-tags__listbox-option {
   border-bottom: 1px solid #ddd;
   padding: 6px 8px;
 }
 
-.react-tags__suggestions li mark {
+.react-tags__listbox-option mark {
   text-decoration: underline;
   background: none;
   font-weight: 600;
 }
 
-.react-tags__suggestions li:hover {
+.react-tags__listbox-option:hover {
   cursor: pointer;
   background: #eee;
 }
 
-.react-tags__suggestions li.is-active {
+.react-tags__listbox-option.is-active {
   background: #b7cfe0;
 }
 
-.react-tags__suggestions li.is-disabled {
+.react-tags__listbox-option.is-disabled {
   opacity: 0.5;
   cursor: auto;
 }
