--- a/crgw-ui/src/components/reusable/FileTagEditor.scss
+++ b/crgw-ui/src/components/reusable/FileTagEditor.scss
@@ -32,6 +32,7 @@
   padding: 6px 0 0 6px;
   border: 1px solid #d1d1d1;
   border-radius: 1px;
+  background: #ffffff;
 
   /* shared font styles */
   font-size: 1em;
@@ -47,6 +48,12 @@
 
 .react-tags__list {
   display: inline;
+  list-style: none;
+}
+
+.react-tags__list-item {
+  display: inline;
+  list-style: none;
 }
 
 .react-tags__tag {
@@ -78,8 +85,8 @@
   display: inline-block;
 
   /* match tag layout */
-  padding: 7px 2px;
-  margin-bottom: 6px;
+  padding: 0.375rem 0.25rem;
+  margin-bottom: 0.25rem;
 
   /* prevent autoresize overflowing the container */
   max-width: 100%;
@@ -101,6 +108,7 @@
   padding: 0;
   border: 0;
   outline: none;
+  background: none;
 
   /* match the font styles */
   font-size: inherit;
@@ -116,6 +124,10 @@
   top: 100%;
   left: 0;
   width: 100%;
+  background: white;
+  border: 1px solid #d1d1d1;
+  border-radius: 2px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 @media screen and (min-width: 30em) {
@@ -128,10 +140,6 @@
   margin: 4px -1px;
   padding: 0;
   list-style: none;
-  background: white;
-  border: 1px solid #d1d1d1;
-  border-radius: 2px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 .react-tags__listbox-option {
