--- a/crgw-ui/src/components/reusable/FileTagEditor.scss
+++ b/crgw-ui/src/components/reusable/FileTagEditor.scss
@@ -32,6 +32,7 @@
   padding: 6px 0 0 6px;
   border: 1px solid #d1d1d1;
   border-radius: 1px;
+  background: #ffffff;
 
   /* shared font styles */
   font-size: 1em;
@@ -41,15 +42,21 @@
   cursor: text;
 }
 
-.react-tags.is-focused {
+.react-tags.is-active {
   border-color: #b1b1b1;
 }
 
-.react-tags__selected {
+.react-tags__list {
   display: inline;
+  list-style: none;
 }
 
-.react-tags__selected-tag {
+.react-tags__list-item {
+  display: inline;
+  list-style: none;
+}
+
+.react-tags__tag {
   display: inline-block;
   box-sizing: border-box;
   margin: 0 6px 6px 0;
@@ -63,36 +70,36 @@
   line-height: inherit;
 }
 
-.react-tags__selected-tag:after {
+.react-tags__tag:after {
   content: "\2715";
   color: #aaa;
   margin-left: 8px;
 }
 
-.react-tags__selected-tag:hover,
-.react-tags__selected-tag:focus {
+.react-tags__tag:hover,
+.react-tags__tag:focus {
   border-color: #b1b1b1;
 }
 
-.react-tags__search {
+.react-tags__combobox {
   display: inline-block;
 
   /* match tag layout */
-  padding: 7px 2px;
-  margin-bottom: 6px;
+  padding: 0.375rem 0.25rem;
+  margin-bottom: 0.25rem;
 
   /* prevent autoresize overflowing the container */
   max-width: 100%;
 }
 
 @media screen and (min-width: 30em) {
-  .react-tags__search {
+  .react-tags__combobox {
     /* this will become the offsetParent for suggestions */
     position: relative;
   }
 }
 
-.react-tags__search-input {
+.react-tags__combobox-input {
   /* prevent autoresize overflowing the container */
   max-width: 100%;
 
@@ -101,60 +108,61 @@
   padding: 0;
   border: 0;
   outline: none;
+  background: none;
 
   /* match the font styles */
   font-size: inherit;
   line-height: inherit;
 }
 
-.react-tags__search-input::-ms-clear {
+.react-tags__combobox-input::-ms-clear {
   display: none;
 }
 
-.react-tags__suggestions {
+.react-tags__listbox {
   position: absolute;
   top: 100%;
   left: 0;
   width: 100%;
-}
-
-@media screen and (min-width: 30em) {
-  .react-tags__suggestions {
-    width: 240px;
-  }
-}
-
-.react-tags__suggestions ul {
-  margin: 4px -1px;
-  padding: 0;
-  list-style: none;
   background: white;
   border: 1px solid #d1d1d1;
   border-radius: 2px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-.react-tags__suggestions li {
+@media screen and (min-width: 30em) {
+  .react-tags__listbox {
+    width: 240px;
+  }
+}
+
+.react-tags__listbox ul {
+  margin: 4px -1px;
+  padding: 0;
+  list-style: none;
+}
+
+.react-tags__listbox-option {
   border-bottom: 1px solid #ddd;
   padding: 6px 8px;
 }
 
-.react-tags__suggestions li mark {
+.react-tags__listbox-option mark {
   text-decoration: underline;
   background: none;
   font-weight: 600;
 }
 
-.react-tags__suggestions li:hover {
+.react-tags__listbox-option:hover {
   cursor: pointer;
   background: #eee;
 }
 
-.react-tags__suggestions li.is-active {
+.react-tags__listbox-option.is-active {
   background: #b7cfe0;
 }
 
-.react-tags__suggestions li.is-disabled {
+.react-tags__listbox-option.is-disabled {
   opacity: 0.5;
   cursor: auto;
 }
